@@ -3,7 +3,7 @@
 
   <groupId>org.alfasoftware</groupId>
   <artifactId>morf-parent</artifactId>
-  <version>2.8.4-SNAPSHOT</version>
+  <version>2.9.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Morf</name>
@@ -28,8 +28,7 @@
   </modules>
   
   <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.release>11</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <aggregate.report.dir>morf-integration-test/target/site/jacoco-aggregate/jacoco.xml</aggregate.report.dir>
 
@@ -51,7 +50,7 @@
     <commons-codec.version>1.15</commons-codec.version>
     <commons-logging.version>1.2</commons-logging.version>
     <guava.version>32.0.0-jre</guava.version>
-    <guice.version>4.2.2</guice.version>
+    <guice.version>5.1.0</guice.version>
     <h2.version>1.4.200</h2.version>
     <hamcrest.version>1.3</hamcrest.version>
     <jcip-annotations.version>1.0</jcip-annotations.version>
@@ -60,7 +59,7 @@
     <junitparams.version>1.0.4</junitparams.version>
     <jxl.version>2.6.12</jxl.version>
     <log4j.version>1.2.15</log4j.version>
-    <mockito.version>3.9.0</mockito.version>
+    <mockito.version>5.4.0</mockito.version>
     <ognl.version>2.6.9</ognl.version>
     <serializer.version>2.7.1</serializer.version>
     <xmlunit.version>2.6.4</xmlunit.version>
@@ -114,6 +113,9 @@
             <systemPropertyVariables>
               <log4j.configuration>file:${basedir}/../etc/log4j-maven.properties</log4j.configuration>
             </systemPropertyVariables>
+            <argLine>
+              --add-opens=java.base/java.lang=ALL-UNNAMED
+            </argLine>
           </configuration>
         </plugin>
         <plugin>
@@ -241,7 +243,7 @@
         <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
-          <version>0.8.5</version>
+          <version>0.8.10</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -432,7 +434,7 @@
           <plugin>
             <groupId>org.sonatype.plugins</groupId>
             <artifactId>nexus-staging-maven-plugin</artifactId>
-            <version>1.6.7</version>
+            <version>1.6.13</version>
             <extensions>true</extensions>
             <configuration>
               <serverId>ossrh</serverId>
